--- a/src/components/ContainersList.css
+++ b/src/components/ContainersList.css
@@ -60,6 +60,7 @@
 }
 
 .loading-spinner {
+  box-sizing: border-box;
   width: 32px;
   height: 32px;
   border: 3px solid #333;
@@ -70,8 +71,12 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .containers-error h3 {
@@ -233,4 +238,9 @@
 .remove-btn:hover {
   border-color: #dc3545;
   background-color: rgba(220, 53, 69, 0.1);
+}
+
+.details-btn:hover {
+  border-color: #007acc;
+  background-color: rgba(0, 122, 204, 0.1);
 }
