--- a/src/components/ContainersList.css
+++ b/src/components/ContainersList.css
@@ -285,12 +285,13 @@
 
 .action-buttons {
   display: flex;
-  gap: 0.25rem;
+  gap: 0.5rem;
   flex-wrap: nowrap;
   overflow: hidden;
-  min-width: 0;
+  align-items: center;
   justify-content: flex-end;
   width: 100%;
+  height: 100%;
 }
 
 .action-btn {
